style change temporary

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 html {
   overflow: hidden; /* We do this so that there is no scroller(making it a one page thing and remove it in Responsive Part*/
 }
+/* We do this so that there is no scroller(making it a one page thing and remove it in Responsive Part*/
 .circle {
   position: absolute;
   top: 0;
